--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,27 @@
-# http://editorconfig.org
-
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
 charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = space
+insert_final_newline = false
+max_line_length = 88
+tab_width = 4
 
-[*.{yml,yaml,rst}]
+[*.feature]
 indent_size = 2
 
-[LICENSE]
-insert_final_newline = false
+[{*.bash,*.zsh,*.sh}]
+indent_size = 2
+tab_width = 2
 
-[Makefile]
-indent_style = tab
+[{*.yml,*.yaml}]
+indent_size = 2
+
+[{*.md,*.rst}]
+indent_size = 2
+
+[{.releaserc,*.json}]
+indent_size = 2
+tab_width = 2
