ci: ignore  rst and md root files changes

--- a/.github/workflows/test_and_make_release.yml
+++ b/.github/workflows/test_and_make_release.yml
@@ -6,9 +6,13 @@ on:
       - master
     paths-ignore:
       - 'docs/**'
+      - '*.rst'
+      - '*.md'
   pull_request:
     paths-ignore:
       - 'docs/**'
+      - '*.rst'
+      - '*.md'
 
 env:
   POETRY_VIRTUALENVS_CREATE: true
