--- a/{{cookiecutter.project_slug}}/.editorconfig
+++ b/{{cookiecutter.project_slug}}/.editorconfig
@@ -8,9 +8,7 @@ indent_style = space
 insert_final_newline = false
 max_line_length = 88
 tab_width = 4
-
-[*.feature]
-indent_size = 2
+trim_trailing_whitespace = true
 
 [{*.bash,*.zsh,*.sh}]
 indent_size = 2
@@ -25,3 +23,9 @@ indent_size = 2
 [{.releaserc,*.json}]
 indent_size = 2
 tab_width = 2
+
+[LICENSE]
+insert_final_newline = false
+
+[Makefile]
+indent_style = tab
