--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -43,13 +43,11 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 # Optional dependencies to be part of `test` extra
-{%- if cookiecutter.use_pytest == "y" %}
 pytest = {version = "^5.1", optional = true}
 pytest-cov = {version = "^2.8.1", optional = true}
 pytest-mock = {version = "^1.13.0", optional = true}
 pytest-html = {version = "^2.0.1", optional = true}
 pytest-asyncio = {version = "^0.10.0", optional = true}
-{%- endif %}
 # Optional dependencies to be part of `bdd` extra
 behave4cli = {version = "^1.1", optional = true}
 PyHamcrest = {version = "^2.0", optional = true}
@@ -89,7 +87,7 @@ tox-pyenv = "^1.1"
 rope = "^0.14.0"
 
 [tool.poetry.extras]
-test = [{{'"pytest", "pytest-cov", "pytest-mock", "pytest-html", "pytest-asyncio", ' if cookiecutter.use_pytest == "y" else ''}}"PyHamcrest"]
+test = ["pytest", "pytest-cov", "pytest-mock", "pytest-html", "pytest-asyncio", "PyHamcrest"]
 bdd = ["behave4cli", "PyHamcrest"]
 lint = ["flake8", "flake8-bugbear", "pydocstyle", "pylint", "yapf"]
 type = ["mypy"]
