ci: fix python version in inexistant matrix

--- a/.github/workflows/test_and_make_release.yml
+++ b/.github/workflows/test_and_make_release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
       - name: Install tools (Poetry)
         uses: Gr1N/setup-poetry@v4
       - name: Get full python version
@@ -59,7 +59,7 @@ jobs:
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
       - name: Install tools (Poetry)
         uses: Gr1N/setup-poetry@v4
       - name: Get full python version
