--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 88
 tab_width = 4
 trim_trailing_whitespace = true
@@ -23,3 +23,9 @@ indent_size = 2
 [{.releaserc,*.json}]
 indent_size = 2
 tab_width = 2
+
+[LICENSE]
+insert_final_newline = false
+
+[Makefile]
+indent_style = tab
