--- a/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
@@ -1,38 +1,41 @@
 fail_fast: false
 repos:
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 20.8b1
     hooks:
       - id: black
-        args: [--safe]
+        args: [ --safe ]
         language_version: python3.7
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.9.1
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==19.3b0]
+        additional_dependencies: [ black==20.8b1 ]
         language_version: python3.7
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
+    rev: v2.2.0
     hooks:
       - id: seed-isort-config
-        args: [--application-directories, "src:."]
+        args: [ --application-directories, "src:." ]
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.7.0
     hooks:
       - id: isort
-        additional_dependencies: [toml]
+        args: [ --profile, "black" ]
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.4
+    hooks:
+      - id: flake8
+        additional_dependencies: [ "flake8-bugbear == 20.1.4" ]
+        language_version: python3.7
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v3.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
       - id: debug-statements
-      - id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.8.0"]
-        language_version: python3.7
   - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.4.2
+    rev: v1.7.0
     hooks:
       - id: rst-backticks
